raffia/tests/error/sass/wrong-indent-level.snap
---
source: raffia/tests/error.rs
---
error: simple selector is expected
  ┌─ wrong-indent-level.sass:3:2
  │
3 │  d: e
  │  ^


